# wayk-now-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
wayk_cli_client/: Cargo.toml  README.md
wayk_cli_client/src/: authentication.rs  config.rs  main.rs
wayk_core/: Cargo.toml  README.md
wayk_core/src/: gfwx.rs  lib.rs
wayk_proto/: Cargo.toml  README.md
wayk_proto/fuzz/: Cargo.toml
wayk_proto/fuzz/fuzz_targets/: messages.rs
wayk_proto/src/: channels_manager.rs  container.rs  error.rs  header.rs  io.rs  lib.rs  macros.rs  packet.rs  serialization.rs  sharee.rs  version.rs
wayk_proto/src/auth/: mod.rs  pfp.rs
wayk_proto/src/message/: mod.rs  status.rs
wayk_proto/src/message/common/: edge_rect.rs  mod.rs  now_string.rs  size_rect.rs
wayk_proto/src/message/connection_sequence/: activate.rs  associate.rs  authenticate.rs  capabilities.rs  channel.rs  handshake.rs  mod.rs  negotiate.rs  terminate.rs
wayk_proto/src/message/now_messages/: access_control.rs  input.rs  mod.rs  mouse.rs  sharing.rs  surface.rs  system.rs  update.rs
wayk_proto/src/message/virtual_channels/: chat.rs  clipboard.rs  exec.rs  file_transfer.rs  mod.rs  tunnel.rs
wayk_proto/src/sm/: mod.rs
wayk_proto/src/sm/client_channels/: chat.rs  clipboard.rs  mod.rs
wayk_proto/src/sm/client_connection/: mod.rs  sub_sm.rs
wayk_proto_derive/: Cargo.toml  README.md
wayk_proto_derive/src/: lib.rs
