[package]
name = "wayk_proto"
keywords = ["wayk", "codec", "protocol"]
description = "WaykNow packet encoder-decoder and sequencing utilities"
version = "0.2.6"
authors = ["Benoît CORTIER <benoit.cortier@fried-world.eu>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Devolutions/wayk-now-rs"

[dependencies]
wayk_proto_derive = { version = "0.2", path = "../wayk_proto_derive" }
lazy_static = "1.4"
byteorder = "1.4"
paste = "1.0"
log = "0.4"
static_assertions = "1"

